# sciteco

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  TODO  bootstrap.am  cmdline.cpp  configure.ac  distribute  distribute.mk.in  expressions.cpp  expressions.h  fallback.teco_ini  goto.cpp  goto.h  grosciteco.tes.1.html  gtk-info-popup.gob  index.html  interface-gtk.cpp  interface-gtk.h  interface-ncurses.cpp  interface-ncurses.h  interface.h  lexer.tes  main.cpp  parser.cpp  parser.h  qbuffers.cpp  qbuffers.h  qregisters.cpp  qregisters.h  rbtree.h  ring.cpp  (+19 more)
.github/workflows/: ci.yml  continuous-integration.yml  irc.yml  nightly.yml
AppImage/: curses.yml  gtk.yml  sciteco-curses.appdata.xml  sciteco-gtk.appdata.xml
compat/bsd/sys/: cdefs.h  queue.h
contrib/: mingw-bundledlls  scintilla.am
contrib/dlmalloc/: Makefile.am
contrib/rb3ptr/: Makefile.am  rb3ptr.c  rb3ptr.h
debian/: changelog  control  copyright  rules  sciteco-common.install  sciteco-curses.install  sciteco-gtk.install  sciteco-gtk.links  sciteco.desktop
doc/: Doxyfile.in  Makefile.am  cheat-sheet.mm  generate-docs.tes  grosciteco.tes  grosciteco.tes.1.in  htbl.tes  sciteco.1.in  sciteco.7.template  sciteco.tmac  tedoc.tes  tedoc.tes.1.in  tutorial.ms.in
freebsd/: Makefile  distinfo  pkg-plist
freebsd/files/: pkg-message.in
lib/: Makefile.am  color.tes  fnkeys.tes  getopt.tes  lexer.tes  opener.tes  repl.tes  scite2co.lua  session.tes  string.tes  tecat.tes
lib/colors/: solarized.tes  terminal.tes
lib/lexers/: abaqus.tes  ada.tes  asciidoc.tes  asl.tes  asm.tes  ave.tes  avs.tes  awk.tes  baan.tes  bash.tes  batch.tes  blitzbasic.tes  c.tes  caml.tes  ch.tes  cmake.tes  cobol.tes  cpp.tes  cs.tes  css.tes  d.tes  devicetree.tes  diff.tes  docbook.tes  eiffel.tes  email.tes  f77.tes  f95.tes  flagship.tes  flash.tes  freebasic.tes  gap.tes  git.tes  go.tes  gob.tes  html.tes  idl.tes  inno.tes  java.tes  js.tes  (+46 more)
m4/: ax_with_ncurses.m4  gob2.m4
patches/: 010-scintilla-teco-control-codes.patch  020-scinterm-fix-64-bit.patch  030-scinterm-crosscompile.patch  035-scinterm-curses-header.patch  040-scinterm-compat.patch  050-scinterm-lexlib.patch  README  scinterm-fix-64-bit.patch  scintilla-teco-control-codes.patch
src/: Makefile.am  cmdline.c  cmdline.cpp  cmdline.h  core-commands.c  core-commands.h  doc.c  doc.h  document.cpp  document.h  eol.c  eol.cpp  eol.h  error.c  error.cpp  error.h  expressions.c  expressions.cpp  expressions.h  file-utils.c  file-utils.h  glob.c  glob.cpp  glob.h  goto-commands.c  goto-commands.h  goto.c  goto.cpp  goto.h  gtk-info-popup.gob  gtkflowbox.h  help.c  help.cpp  help.h  interface-curses.cpp  interface-curses.h  interface-gtk.cpp  interface-gtk.h  interface-ncurses.cpp  interface-ncurses.h  (+56 more)
src/interface-curses/: Makefile.am  curses-icons.c  curses-icons.h  curses-info-popup.c  curses-info-popup.cpp  curses-info-popup.h  curses-utils.c  curses-utils.cpp  curses-utils.h  interface-curses.cpp  interface-curses.h  interface.c
src/interface-gtk/: Makefile.am  fallback.css  gtk-canonicalized-label.gob  gtk-info-popup.c  gtk-info-popup.gob  gtk-info-popup.h  gtk-label.c  gtk-label.h  gtkflowbox.c  interface-gtk.cpp  interface-gtk.h  interface.c  teco-gtk-info-popup.gob  teco-gtk-label.gob  view.c
tests/: .gitattributes  Makefile.am  atlocal.in  autoeol-input.txt  autoeol-output.txt  monkey-parse.apl  monkey-test.apl  testsuite.at
win32/: .teco_css  loaders.cache
www/: build.tes  screenshots.md
